; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_group.c_sys_getpgid.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_group.c_sys_getpgid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }

@.str = private unnamed_addr constant [12 x i8] c"getpgid(%d)\00", align 1
@current = common dso_local global %struct.TYPE_4__* null, align 8
@_EPERM = common dso_local global i64 0, align 8
@pids_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sys_getpgid(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i32 @STRACE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i64 %5)
  %7 = load i64, i64* %3, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @current, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %10, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %9
  %16 = load i64, i64* @_EPERM, align 8
  store i64 %16, i64* %2, align 8
  br label %26

17:                                               ; preds = %9, %1
  %18 = call i32 @lock(i32* @pids_lock)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** @current, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  store i64 %23, i64* %4, align 8
  %24 = call i32 @unlock(i32* @pids_lock)
  %25 = load i64, i64* %4, align 8
  store i64 %25, i64* %2, align 8
  br label %26

26:                                               ; preds = %17, %15
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local i32 @STRACE(i8*, i64) #1

declare dso_local i32 @lock(i32*) #1

declare dso_local i32 @unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
